--- a/views/blank.ejs
+++ b/views/blank.ejs
@@ -8,11 +8,10 @@
     <link rel="stylesheet" href="/css/blobs.css" />
   </head>
 
-  <script src="/js/blobs.js"></script>
+  <div class="binary-background"></div>
+  <script src="/js/binary.js"></script>
 
   <body>
-    <canvas class="blobs-canvas"></canvas>
-
     <!-- Navbar -->
     <nav class="navbar">
       <a href="/" class="logo">Zach Heidenreich</a>
