--- a/views/hobbies.ejs
+++ b/views/hobbies.ejs
@@ -8,6 +8,8 @@
   </head>
 
   <body>
+    <div class="binary-background"></div>
+    <script src="/js/binary.js"></script>
     <% if (!preview) { %>
     <nav class="navbar">
       <a href="/" class="logo">Zach Heidenreich</a>
