--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
+    <div class="binary-background"></div>
+    <script src="/js/binary.js"></script>
     <% if (!preview) { %>
     <nav class="navbar">
       <a href="/" class="logo">Zach Heidenreich</a>
